tests/baselines/reference/YieldExpression9_es6.errors.txt
YieldExpression9_es6.ts(2,9): error TS2304: Cannot find name 'foo'.


==== YieldExpression9_es6.ts (1 errors) ====
    var v = function*() {
      yield(foo);
            ~~~
!!! error TS2304: Cannot find name 'foo'.
    }